...
            app:text="@string/save_battery"
            app:subtitle="@string/subtitle_save_battery"
            app:icon="@drawable/ic_battery_36"
            />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/manualGatewaySelection"
            app:text="@string/gateway_selection_title"
            app:subtitle="@string/gateway_selection_recommended_location"
            app:icon="@drawable/ic_web"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="visible"
...
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="visible"
            />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/advancedSettings"
            app:icon="@drawable/ic_cog"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:text="@string/advanced_settings"
            />

...
