...
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider" />

    <!--
        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:drawSelectorOnTop="false"
            android:scrollbarStyle="outsideOverlay"
            android:visibility="gone"
...
