...
            app:subtitle="@string/subtitle_always_on_vpn"
            app:icon="@drawable/ic_always_on_36"
            android:visibility="visible"
            />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/exclude_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/exclude_apps_fragment_title"
            app:icon="@drawable/ic_shield_remove_grey600_36dp"
            android:visibility="visible"
            />
...
