...
    <string name="cert_from_keystore">Got certificate \'%s\' from keystore</string>
    <string name="provider_label">Provider:</string>
    <string name="provider_label_none">No provider configured</string>
    <string name="status_unknown">Status unknown.</string>
    <string name="eip_service_label">Encrypted VPN Internet Access</string>
    <string name="configuration_wizard_title">Select a service provider</string>
    <string name="add_provider">Add new Provider</string>
    <string name="introduce_new_provider">Add a new service provider</string>
    <string name="save">Save</string>
    <string name="new_provider_uri">Domain name</string>
    <string name="valid_url_entered">The URL is valid</string>
    <string name="not_valid_url_entered">Malformed URL</string>
    <string name="provider_details_title">Provider details</string>
...
    <string name="setup_error_configure_button">Configure</string>
    <string name="setup_error_close_button">Exit</string>
    <string name="setup_error_text">There was an error configuring %s with your chosen provider.\n\nYou may choose to reconfigure, or exit and configure a provider upon next launch.</string>
    <string name="setup_error_text_custom">There was an error configuring %s.\n\nYou may choose to reconfigure, or exit.</string>
    <string name="server_unreachable_message">The server is unreachable, please try again.</string>
    <string name="error.security.pinnedcertificate">Security error, upgrade the app or choose another provider.</string>
    <string name="malformed_url">It doesn\'t seem to be a %s provider.</string>
    <string name="certificate_error">This is not a trusted %s provider.</string>
    <string name="service_is_down_error">The service is down.</string>
    <string name="configuring_provider">Configuring provider</string>
    <string name="incorrectly_downloaded_certificate_message">Your anonymous certificate was not downloaded</string>
    <string name="downloading_certificate_message">Downloading VPN certificate</string>
    <string name="updating_certificate_message">Updating VPN certificate</string>
...
    <string name="next">Next</string>
    <string name="add_provider_description">Bitmask connects to trusted providers that are not publicly listed. Enter your provider’s url below.</string>
    <string name="provider_description_calyx">Calyx is a non-profit education and research organization devoted to studying, testing, developing and implementing privacy technology and tools to promote free speech, free expression, civic engagement and privacy rights on the internet and in the mobile communications industry.</string>
    <string name="title_circumvention_setup">Do You Require Censorship Circumvention?</string>
    <string name="circumvention_setup_description">If you live where the internet is censored you can use our censorship circumvention options to access all internet services. These options will slow down your connection!</string>
    <string name="circumvention_setup_hint">%s will automatically try to connect you to the internet using a variety of circumvention technologies. You can fine tune this in the advanced settings.</string>
    <string name="use_standard_vpn">Use standard %s</string>
    <string name="use_circumvention_tech">Use circumvention tech (slower)</string>
    <string name="description_configure_provider">To connect to your provider %1$s is fetching all the required configuration information. This only happens during first setup.</string>
    <string name="description_configure_provider_circumvention">%1$s is attempting to collect all required configuration data from the provider. This only happens during first setup. You selected to use circumvention technology, so this might take some time.</string>
    <string name="percentage" translatable="false">%d%</string>
    <string name="details">Details</string>
    <string name="tor_status">Tor Status</string>
...
