<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2012-2016 Arne Schwabe
  ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
  -->

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
    android:paddingTop="8dip"
    android:paddingBottom="8dip"
    android:columnCount="4"
    tools:ignore="RtlCompat"
    >

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_rowSpan="1"
        android:layout_marginEnd="8dip"
        android:scaleType="centerInside"
        android:contentDescription="@null" />

    <androidx.appcompat.widget.AppCompatTextView
        tools:text="@string/app_name"
        android:id="@+id/app_name"
        android:layout_width="0dip"
        android:layout_columnSpan="2"
        android:layout_rowSpan="1"
        android:layout_gravity="fill_horizontal|center_vertical"
        android:layout_marginTop="2dip"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textAlignment="viewStart" />

    <se.leap.bitmaskclient.base.views.SimpleCheckBox
        android:id="@+id/app_selected"
        android:layout_height="32dp"
        android:layout_width="32dp"
        android:layout_gravity="center_vertical"
        android:layout_rowSpan="1"
        android:visibility="visible" />

</GridLayout>