...
                android:paddingTop="@dimen/stdpadding"
                android:id="@+id/provider_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/provider_description_riseup"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_customProvider"
                android:layout_marginVertical="@dimen/stdpadding"
                android:paddingHorizontal="@dimen/stdpadding"
                android:paddingVertical="@dimen/compact_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
...
